--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ realestate-1/src/App.test.js
 realestate-1/src/App.test.js
 realestate-1/src/setupTests.js
 realestate-1/src/index.js
+realestate-1/src/App.test.js
+realestate-1/src/index.js
+realestate-1/src/logo.svg
+realestate-1/src/reportWebVitals.js
+realestate-1/src/setupTests.js
