--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ realestate-1/src/index.js
 realestate-1/src/logo.svg
 realestate-1/src/reportWebVitals.js
 realestate-1/src/setupTests.js
+realestate-1/src/App.js
+realestate-1/src/index.js
